# Kinect_Azure_RR_Interface

./: .gitignore  README.md
KinectAzure/: CMakeLists.txt  KinectAzure.vcxproj  KinectPCLRRclient.py  KinectPCLRRtester.py  KinectSensor.yaml  README.md  kinect2_impl.cpp  kinect2_impl.h  main.cpp  packages.config
robdef/: edu.rpi.robotics.kinect.robdef
